fix ticker and clock z-index

--- a/src/components/Dashboard/style.css
+++ b/src/components/Dashboard/style.css
@@ -213,7 +213,7 @@ h1.panel-header:after {
     overflow: hidden;
     display: flex;
     justify-content: space-between;
-    z-index: 999;
+    z-index: 990;
 }
 
 .ticker-header {
