--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -100,6 +100,7 @@
     display: flex;
     justify-content: space-between;
     padding: 25px 10px;
+    z-index: 999;
 
     transition: opacity 200ms, transform 200ms;
     transform: translate(0, -30px);
